--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,16 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-rest')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.liquibase:liquibase-core')
+    
     runtime('org.postgresql:postgresql')
+    runtime('com.h2database:h2')
+    
     compileOnly('org.projectlombok:lombok')
+
+
+    compile('org.springframework:spring-aspects')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.4.0'
 }
 
 dependencyManagement {
