refactor compute balance

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:postgresql://127.0.0.1:5433/rashod_java
+    url: jdbc:postgresql://127.0.0.1:5432/rashod_java
     username: postgres
     password: p123
   liquibase:
-    drop-first: false
+    drop-first: true
