--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     rest:
       detection-strategy: annotated
   datasource:
-    url: jdbc:postgresql://127.0.0.1:5440/rashod2
-    username: user
+    url: jdbc:postgresql://127.0.0.1:5433/rashod_java_prod
+    username: postgres
     password: p123
   jpa:
     generate-ddl: false
@@ -18,6 +18,7 @@ spring:
       ddl-auto: validate
   liquibase:
     changeLog: classpath:/liquibase/db.changelog-master.xml
+    drop-first: false
 
 app:
   param:
