--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,7 +4,7 @@ spring:
     username: postgres
     password: p123
   liquibase:
-    drop-first: true
+    drop-first: false
   jpa:
     show-sql: true
 server:
