--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     runtime('com.h2database:h2')
     
     compileOnly('org.projectlombok:lombok')
+    annotationProcessor("org.projectlombok:lombok")
 
 
     compile('org.springframework:spring-aspects')
