--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,25 @@ buildscript {
     }
 }
 
+plugins {
+    id 'net.ltgt.apt' version '0.21'
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'net.ltgt.apt-idea'
 
 group = 'com.vuvarov'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
+
+compileJava {
+    options.compilerArgs.add("-Amapstruct.unmappedTargetPolicy=IGNORE")
+    options.compilerArgs.add("-Amapstruct.defaultComponentModel=spring")
+}
 
 repositories {
     mavenCentral()
@@ -37,6 +48,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 
+    implementation  group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
+    annotationProcessor   group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
 
 
 
