--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'net.ltgt.apt-idea'
 
 group = 'com.vuvarov'
-version = '0.2.1-snapshot'
+version = '0.3.1-snapshot'
 sourceCompatibility = 11
 
 compileJava {
@@ -46,6 +46,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
     implementation('org.springframework.cloud:spring-cloud-starter-config')
     implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
+
     compile('org.springframework.security:spring-security-jwt:1.1.1.RELEASE')
 
     compile('org.liquibase:liquibase-core')
@@ -62,7 +64,7 @@ dependencies {
 
     runtime('org.postgresql:postgresql')
     runtime('com.h2database:h2')
-    
+
     compileOnly('org.projectlombok:lombok')
     annotationProcessor("org.projectlombok:lombok")
 
