--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'net.ltgt.apt-idea'
 
 group = 'com.vuvarov'
-version = '0.3.1-snapshot'
+version = '0.3.3-snapshot'
 sourceCompatibility = 11
 
 compileJava {
@@ -58,8 +58,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 
+    implementation "org.mapstruct:mapstruct:1.4.0.Final"
     annotationProcessor   group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.4.0.Final'
-    implementation  group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.4.0.Final'
 
 
     runtime('org.postgresql:postgresql')
